Change log for Socialtext Open

2.19.X

Release notes, 2.19.0.0  Feb 2008

  Major Javascript refactorings to improve overall product speed.

  Improvements to enable usage reporting (usage reporting not part of Socialtext Open)

  Allow for setting the hostname used by the website, instead of using the machine's name.

  Disallow <script> tags in .html WAFL blocks.


2.18.X

Release notes, 2.18.5.0  Feb 2008

  Made the search input box a bit wider.

  Support Socialtext plugins that can be dropped in, without having to change any Socialtext code.

  When searching accross workspaces using the REST API, links now correctly point to the correct workspaces.

  Removed some JS code that alerts the page html under certain circumstances, when you try to edit it.


Release notes, 2.18.4.0  Jon 2008

  [BUGS]

  {bz: 406} This fixes a bug whereby making a backup copy of a workspace fails silently if the location for the backup does not exist.

  {bz: 358} Generate usage reports for workspaces that have a '_' in their name.

  Refactored ceqlotron to allow for an alternate event listener that combines the current four change events into a single process call to st-admin instead of forking individual processes.

  fetchrss-relative-links - Fix links without a hostname found in RSS feeds using the {fetchrss} wafl.

Release notes, 2.18.3.0  Jan 2008

Happy New Year

  [BUGS]

   {rt: 27013} - When creating a new weblog from the settings page it is possible to create blogs with names like "foo Blog Weblog" when "foo Blog" should be accepted. This branch includes a fix to that problem, as well as more complete testing of blog creation.

   Spike Bug 151: previous code sampled only 1000 chars of a file to guess attachment type. This wasn't sufficient for all filetypes

   Spike bug 154: Properly localize the link to the japanese help docs from the workspace permissions page.
