@@ -15,7 +15,7 @@ use Socialtext::Authz;
 use Socialtext::Permission 'ST_READ_PERM';
 use Socialtext::Validate qw( validate SCALAR_TYPE USER_TYPE WORKSPACE_TYPE );
 
-our $VERSION = '2.19.0.0';
+our $VERSION = '2.19.0.2';
 
 const product_version => $VERSION;
 field using_debug => 0;
